integ-tests/tests/snapshots/parser__bad_keys__multi_line2.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_line2:1:1
  │
1 │ """"""=3
  │ ^^^ multiline keys are not allowed
