integ-tests/tests/snapshots/parser__bad_keys__multi_line4.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_line4:1:1
  │
1 │ """key"""=3
  │ ^^^^^^ multiline keys are not allowed
