integ-tests/tests/snapshots/parser__bad_keys__mutli_line.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ mutli_line:1:1
  │
1 │ ''''''=3
  │ ^^^ multiline keys are not allowed
