integ-tests/tests/snapshots/parser__bad_keys__newline.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ newline:1:4
  │  
1 │   key
  │ ╭───^
2 │ │ =3
  │ ╰^ expected an equals
